# degradation-htr-test

./: KAN-DiffPhys-2D-Comparison-Organic.py  KAN-DiffPhys-2D-Comparison.py  KAN-DiffPhys-2D.py  KAN-DiffPhys-3D-Comparison.py  KAN-DiffPhys-3D.py  KAN-DiffPhys-Battery-Comparison.py  KAN-DiffPhys-Battery.py  KAN-DiffPhys-Benchmark.py  KAN-DiffPhys-QuantitativeFinance-MLPvsKAN.py  KAN-DiffPhys-QuantitativeFinance.py  KAN-DiffPhys.py  KAN-Discontinuity-Toy.py  KAN_LearnPhys.py  Learnable-Activations.py  MLP_vs_KAN.py  SC-KAN.py  activation_battle_royale.py  agkan.py  agkan_eval.py  agkan_molecular_graphs.py  agkan_simple.py  attention_gnn.py  bayesian_kan.py  complex_kan_demo.py  dataset_explorer.py  deeper_battle_royale.py  entropy_autofocus.py  espirit.py  espirit_diagnose_data.py  espirit_kan_experiments.py  evaluate_pinn.py  explore_osf_dataset.py  extract_raw_wrapped_phase.py  fastMRI_SIREN.py  fastmri_benchmark.py  fastmri_benchmark_2.py  fastmri_kan_REAL_QSM_data.py  fastmri_kan_split_test.py  final_comparison_viz.py  fourier_feature_pinn.py  (+95 more)
