[project]
name = "degradation-htr-test"
version = "0.1.0"
description = "Minimal test for degradation-aware HTR"
requires-python = ">=3.10"
dependencies = [
    "transformers>=4.35.0",
    "torch>=2.1.0",
    "torchvision>=0.16.0",
    "pillow>=10.0.0",
    "jiwer>=3.0.0",
    "numpy>=2.2.6",
    "matplotlib>=3.10.7",
    "networkx>=3.4.2",
    "scipy>=1.15.3",
    "scikit-image>=0.25.2",
]

[project.optional-dependencies]
dev = [
    "jupyter>=1.0.0",
    "matplotlib>=3.7.0",
]
